refactor: jwtutil 중점적으로 리펙토링